==================== 2.25.92 ====================

2009-02-21  Jens Granseuer  <jensgr@gmx.net>

	* xrandr-capplet.c: (error_message): GTK_DIALOG_NO_SEPARATOR cannot be
	used with GtkMessageDialog

2009-02-19  Federico Mena Quintero  <federico@novell.com>

	* xrandr-capplet.c (paint_output): Make "on" monitors have black
	text, to be consistent with GnomeRRLabeler's little labels.

2009-02-08  Jens Granseuer  <jensgr@gmx.net>

	* display-capplet.glade:
	* display-properties.desktop.in.in: change window title and menu entry
	name to "Display"/"Display Preferences" to be consistent with other
	settings dialogs (bug #570907)

2009-02-05  Federico Mena Quintero  <federico@novell.com>

	https://bugzilla.novell.com/show_bug.cgi?id=472226 - Don't block
	the display capplet's GUI while changing the RANDR configuration.

	* xrandr-capplet.c (struct App): Move the D-bus fields into here,
	outside of apply().
	(apply): Use an async D-bus call to gnome-settings-daemon so we
	don't block the GUI.  Keep the GUI desensitized while the call is
	happening.

2009-02-04  Federico Mena Quintero  <federico@novell.com>

	https://bugzilla.novell.com/show_bug.cgi?id=434729 - Realign the
	outputs when changing the resolution of one of them, so one
	doesn't get overlapping monitors (when the resolution becomes
	bigger) or disjoint monitors (when the resolution becomes smaller).

	* xrandr-capplet.c (on_resolution_changed): Align the monitors.
	(realign_outputs_after_resolution_change): New function.  The
	algorithm here could certainly be improved...

==================== 2.25.90 ====================

2009-01-26  Jens Granseuer  <jensgr@gmx.net>

	* xrandr-capplet.c: (rebuild_rate_combo),
	(rebuild_resolution_combo): don't crash if we don't have an output
	(bug #569218)

2008-12-18  Federico Mena Quintero  <federico@novell.com>

	* xrandr-capplet.c (get_output_for_window): Include "off" outputs
	in the intersected rectangles.  This makes the capplet not select