@@ -1,3 +1,8 @@
+2009-03-11  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* xrandr-capplet.c: Make the strings of the Rotation dialog appear
+	translated. Bug #574693.
+
 ==================== 2.25.92 ====================
 
 2009-02-21  Jens Granseuer  <jensgr@gmx.net>
